Use Activate.ps1 instead of activate for venv

--- a/.github/workflows/createAndPackageExecutable.yml
+++ b/.github/workflows/createAndPackageExecutable.yml
@@ -33,7 +33,7 @@ jobs:
             - name: "Setup virtual environment"
               run: |
                 python -m venv venv
-                .\venv\Scripts\activate
+                .\venv\Scripts\Activate.ps1
             - name: "Install dependencies"
               run: |
                 python -m pip install --upgrade pip
