--- a/.github/workflows/createAndPackageExecutable.yml
+++ b/.github/workflows/createAndPackageExecutable.yml
@@ -45,3 +45,28 @@ jobs:
                 path: |
                   simpleDownloader.exe
                   icons
+
+    deployToGithubPages:
+        environment:
+            name: github-pages
+            url: ${{ steps.deployment.outputs.page_url }}
+        runs-on: ubuntu-latest
+        needs: [buildExeOnWindows]
+        steps:
+            - name: "Checkout repository"
+              uses: actions/checkout@v3
+            - name: "Download execuable artifact"
+              uses: actions/download-artifact@v3
+              with:
+                name: simpleDownloader-release
+                path: gh_pages
+            - name: "Setup Pages"
+              uses: actions/configure-pages@v2
+            - name: "Upload pages artifact"
+              uses: actions/upload-pages-artifact@v1
+              with:
+                path: gh_pages
+            - name: "Deploy to GitHub Pages"
+              id: deployment
+              uses: actions/deploy-pages@v1
+    
